# openenvhackbottle

./: .dockerignore  .gitignore  Dockerfile  README.md  citation.bib  inference.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
clinical_bench/: README.md  pyproject.toml
clinical_bench/server/: app.py
database_cleaning/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
database_cleaning/server/: Dockerfile  __init__.py  app.py  database_cleaning_environment.py
frontend/src/: App.jsx  styles.css
medagent_env/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
medagent_env/server/: Dockerfile  app.py  medagent_environment.py  seed_db.py  tasks.py
medagent_env/server/data/: medagent.db
server/: app.py
